--- a/internal/lang/translations/ru.yml
+++ b/internal/lang/translations/ru.yml
@@ -1,6 +1,7 @@
-welcome_message: "Добро пожаловать! Используйте /check <крипто_адрес> для проверки адреса в базах данных AML."
-check_usage: "Пожалуйста, укажите крипто-адрес для проверки. Использование: /check <крипто_адрес>"
-address_checked: "Адрес %s проверен в базах данных AML:\n- Подозрительной активности не обнаружено"
-error_checking: "Ошибка при проверке адреса: %s"
-unknown_command: "Я не знаю такую команду"
-language_selection: "Выберите язык:" 
+welcome: "Добро пожаловать в AML бот! Используйте /check <адрес> для проверки адреса или транзакции."
+check_usage: "Пожалуйста, укажите адрес или хеш транзакции для проверки. Использование: /check <адрес>"
+unknown_command: "Неизвестная команда. Используйте /start для просмотра доступных команд."
+error_checking: "Ошибка при проверке адреса: %v"
+result_suspicious: "⚠️ Обнаружена подозрительная активность!\nУровень риска: %.2f\nДетали: %s"
+result_clean: "✅ Адрес выглядит безопасным\nУровень риска: %.2f\nДетали: %s"
+language_selection: "Выберите язык:"
